# vx

./: Cargo.toml  README.md  compile_shaders.py
app/: Cargo.toml
app/src/: lib.rs  main.rs  player_plugin.rs  render_plugin.rs  time_plugin.rs  window_plugin.rs
data/: Cargo.toml
data/src/: camera.rs  lib.rs  math.rs  transform.rs  voxel.rs  voxel_block.rs
ecs/: Cargo.toml
ecs/src/: component.rs  lib.rs  manager.rs  query.rs  resource.rs  schedule.rs  system.rs
gfx/: Cargo.toml
gfx/src/: camera.rs  lib.rs  state.rs
renderer/: Cargo.toml
renderer/src/: acceleration_structure_state.rs  buffer.rs  buffer_state.rs  command_state.rs  init_state.rs  lib.rs  mesh.rs  pipeline_state.rs  state.rs  swapchain_state.rs
shaders/: checkerboard.rgen  closesthit.rchit  debug.rgen  miss.rmiss  ray_direction.rgen  raygen.rgen  shader.vert  sphere.rgen  uniform_test.rgen
